--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,15 @@
 @use 'hero';
 @use 'componentes/infos_bar';
 @use 'componentes/buttons';
+@use 'event';
+@use 'variables';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color: #fff;
+    color: variables.$textColor;
     list-style: none;
 }
 
